--- a/stylesheet.css
+++ b/stylesheet.css
@@ -87,6 +87,11 @@ body {
 
 
 
+.from-top {
+	position:fixed;
+	top:80px;
+	right:50px;
+}
 
 .from-top:before, 
 .from-top:after {
@@ -120,7 +125,8 @@ body {
 
 .about-me {
 	position:fixed;
-	left: -10px;
+	left: 50px;
+	top:80px;
 }
 
 .about-me:before, 
@@ -150,9 +156,11 @@ body {
 
 
 
+
 .contact {
 	position:fixed;
-	right: +10px;
+	right: 50px;
+	bottom:80px;
 }
 
 .contact:before, 
@@ -176,6 +184,37 @@ body {
 
 .contact:hover:before,
 .contact:hover:after {
+	height: 100%;
+}
+
+
+.shop {
+	position:fixed;
+	left: 50px;
+	bottom:80px;
+}
+
+.shop:before, 
+.shop:after {
+	left: 0;
+	height: 0;
+	width: 100%;
+}
+
+.shop:before {
+	bottom: 0;	
+	border: 1px solid var(--inv);
+	border-top: 0;
+	border-bottom: 0;
+}
+
+.shop:after {
+	top: 0;
+	height: 0;
+}
+
+.shop:hover:before,
+.shop:hover:after {
 	height: 100%;
 }
 
