--- a/untitled-master/css/style.css
+++ b/untitled-master/css/style.css
@@ -91,4 +91,34 @@ body {
 	width: 100%;
 	background-image: linear-gradient(-25deg, #616161, #5F9EA0, #9d95d0);
 }
+.social {
+	position: fixed; 
+	left: 48%;
+	bottom:50px;
+	font-size: 30px;
+	text-align: center;
+}
+.fa {
+    padding: 10px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+	border-radius: 15%;
+}
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+    background: #3B5998;
+    color: white;
+}
+
+.fa-instagram {
+	opacity: 0.8;
+	background: linear-gradient(-25deg, yellow, red, blue);
+	color: white;
+}
+
 
