--- a/untitled-master/css/sheet.css
+++ b/untitled-master/css/sheet.css
@@ -166,3 +166,33 @@ body {
 	width: 100%;
 	background-image: linear-gradient(-25deg, #616161, #5F9EA0, #9d95d0);
 }
+
+
+.topnav .search-container {
+    position: fixed;
+    top: 0;
+    width: 100%;
+	float: right;
+}
+
+.topnav input[type=text] {
+  padding: 6px;
+  margin-top: 8px;
+  font-size: 17px;
+  border: none;
+}
+
+.topnav .search-container button {
+  float: far-right;
+  padding: 6px 10px;
+  margin-top: 8px;
+  margin-right: 16px;
+  background: #ddd;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
+
+.topnav .search-container button:hover {
+  background: #ccc;
+}
