--- a/untitled-master/css/style.css
+++ b/untitled-master/css/style.css
@@ -158,3 +158,81 @@ body {
   background: #ccc;
 }
 
+.btn {		
+	position: relative;	
+	padding: 1.4rem 4.2rem;
+	padding-right: 3.1rem;
+	font-size: 1.4rem;
+	color: var(--inv);
+	letter-spacing: 1.1rem;
+	text-transform: uppercase;
+	transition: all 600ms cubic-bezier(0.77, 0, 0.175, 1);	
+	user-select: none;
+}
+
+.btn:before, .btn:after {
+	content: '';
+	position: absolute;	
+	transition: inherit;
+	z-index: -1;
+}
+
+.btn:hover {
+	color: var(--def);
+	transition-delay: .6s;
+}
+
+.btn:hover:before {
+	transition-delay: 0s;
+}
+
+.btn:hover:after {
+	background: var(--inv);
+	transition-delay: .4s;
+}
+.homepage {
+	position:fixed;
+	left: 50px;
+	top:80px;
+}
+
+.homepage:before, 
+.homepage:after {
+	left: 0;
+	height: 0;
+	width: 100%;
+}
+
+.homepage:before {
+	bottom: 0;	
+	border: 1px solid var(--inv);
+	border-top: 0;
+	border-bottom: 0;
+}
+
+.homepage:after {
+	top: 0;
+	height: 0;
+}
+
+.homepage:hover:before,
+.homepage:hover:after {
+	height: 100%;
+}
+a:link {
+	text-decoration:none;
+	
+}
+
+a:visited {
+	text-decoration: none;
+	color: inherit;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+a:active {
+    text-decoration: none;
+}
