--- a/untitled-master/css/sheet.css
+++ b/untitled-master/css/sheet.css
@@ -9,19 +9,20 @@
 	width:100%;
 	float:left;
 	padding-top:0px;
+	position: fixed;
 }
 
 #form-div {
 	background-color:rgba(72,72,72,0.4);
 	padding-left:35px;
 	padding-right:35px;
-	padding-top:35px;
+	padding-top:15px;
 	padding-bottom:50px;
 	width: 450px;
 	float: left;
 	left: 50%;
 	position: absolute;
-  margin-top:30px;
+  margin-top:-250px;
 	margin-left: -260px;
   -moz-border-radius: 7px;
   -webkit-border-radius: 7px;
@@ -162,6 +163,12 @@ input:focus, textarea:focus {
 	}
 }
 body {
+	--def: #5F9EA0; 	
+	--inv: #fff;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
 	height: 100vh;
 	width: 100%;
 	background-image: linear-gradient(-25deg, #616161, #5F9EA0, #9d95d0);
